Refactor: Switched to reducer and context structure
- Replaced useState with useReducer for better state logic handling
- Added Context API to manage state and dispatch across components
- Improved overall modularity and scalability of state management

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -23,7 +23,7 @@ body.light {
 
 @media(max-width: 768px) {
     .parent-element {
-        max-width: auto !important;
-        margin: 0 1rem;
+        max-width: calc(100% - 2%) !important;
+        margin: 0rem auto;
     }
 }
